<resources>
    <string name="app_name">coffee shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="navigation_arrow">navigation_arrow</string>
    <string name="welcome_back">welcome_back</string>
    <string name="logo">logo</string>
    <string name="username">UserName</string>
    <string name="personal_and_account_information">Personal and account information</string>
    <string name="email">Email</string>
    <string name="preferences">Preferences</string>
    <string name="macciato">Macciato</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="additions">Additions</string>
    <string name="sugar">Sugar</string>
    <string name="size">Size</string>
    <string name="total">Total :</string>
    <string name="account_information">Account Information</string>
</resources>