<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >





        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/personal_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/fontsfree_net_sf_ui_display_medium"
            android:text="@string/account_information"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline3" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/value_username"
            app:layout_constraintBottom_toTopOf="@id/value_email"
            android:id="@+id/horizontal_line"
            />



        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/_19sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/_30sdp"

            app:layout_constraintStart_toStartOf="@+id/personal_info"
            app:layout_constraintTop_toBottomOf="@+id/personal_info" />

        <TextView
            android:id="@+id/value_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hazem Khaled"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_19sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="@+id/personal_info"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

        <TextView
            android:id="@+id/value_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hazemk778@gmail.com"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/log_out_color"
            android:text="LogOut"
            app:cornerRadius="@dimen/_10sdp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>