<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".PreferencesFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/preferences"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/iv_back"
            app:layout_constraintBottom_toBottomOf="@+id/tv_preferences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_preferences" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent=".5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/iv_splash"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/tv_preferences">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/iv_header">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/macciato"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent=".36"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/macciato"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36 EGP"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintStart_toStartOf="@+id/category"
            app:layout_constraintTop_toBottomOf="@id/category" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_add"
            app:layout_constraintBottom_toBottomOf="@+id/remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/remove"

            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintTop_toTopOf="@+id/remove" />

        <ImageView
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_remove"
            app:layout_constraintBottom_toBottomOf="@+id/counter"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintStart_toEndOf="@+id/counter"
            app:layout_constraintTop_toTopOf="@id/counter"

            />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintEnd_toStartOf="@+id/remove"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/linear_layout" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:scaleX="2"
            android:src="@drawable/iv_line"
            app:layout_constraintBottom_toTopOf="@id/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"

            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"

            android:scaleX="2"
            android:src="@drawable/iv_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size"

            />

        <ImageView
            android:id="@+id/iv_coffee_small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/iv_coffe_small"
            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintEnd_toStartOf="@id/iv_coffee_med"
            app:layout_constraintStart_toEndOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/line"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent=".39"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_coffee_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_coffe_med"
            app:layout_constraintBottom_toBottomOf="@+id/iv_coffee_small"
            app:layout_constraintEnd_toStartOf="@id/iv_coffe_large"

            app:layout_constraintStart_toEndOf="@id/iv_coffee_small"
            app:layout_constraintTop_toTopOf="@+id/iv_coffee_small" />

        <ImageView
            android:id="@+id/iv_coffe_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:src="@drawable/iv_coffe_large"
            app:layout_constraintBottom_toBottomOf="@+id/iv_coffee_med"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_coffee_med"
            app:layout_constraintTop_toTopOf="@+id/iv_coffee_med" />

        <ImageView
            android:id="@+id/iv_no_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/iv_no_sugar"
            app:layout_constraintBottom_toTopOf="@id/line3"
            app:layout_constraintEnd_toStartOf="@+id/iv_sugar1"
            app:layout_constraintStart_toEndOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <ImageView
            android:id="@+id/iv_sugar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_sugar1"
            app:layout_constraintBottom_toBottomOf="@+id/iv_no_sugar"
            app:layout_constraintEnd_toStartOf="@+id/iv_sugar2"
            app:layout_constraintStart_toEndOf="@+id/iv_no_sugar"
            app:layout_constraintTop_toTopOf="@+id/iv_no_sugar" />

        <ImageView
            android:id="@+id/iv_sugar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_sugar2"
            app:layout_constraintBottom_toBottomOf="@+id/iv_sugar1"
            app:layout_constraintEnd_toStartOf="@+id/iv_sugar3"
            app:layout_constraintStart_toEndOf="@+id/iv_sugar1"
            app:layout_constraintTop_toTopOf="@+id/iv_sugar1" />

        <ImageView
            android:id="@+id/iv_sugar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_sugar3"
            app:layout_constraintBottom_toBottomOf="@+id/iv_sugar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_sugar2"
            app:layout_constraintTop_toTopOf="@+id/iv_sugar2" />

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleX="2"
            android:src="@drawable/iv_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_no_sugar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toTopOf="@id/line3"
            app:layout_constraintStart_toStartOf="@+id/size"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <ImageView
            android:id="@+id/iv_pref1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/iv_pref1"
            app:layout_constraintBottom_toTopOf="@+id/iv_line4"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <ImageView
            android:id="@+id/iv_pref2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iv_pref2"
            app:layout_constraintBottom_toBottomOf="@+id/iv_pref1"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toEndOf="@+id/iv_pref1"
            app:layout_constraintTop_toTopOf="@+id/iv_pref1" />

        <ImageView
            android:id="@+id/iv_line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleX="2"
            android:src="@drawable/iv_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_pref1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".77" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additions"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintBottom_toTopOf="@id/iv_line4"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/line3" />

        <TextView
            android:id="@+id/tv_total_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="36 EGP"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/iv_line4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_10sdp"
            android:textAllCaps="false"
            android:backgroundTint="@color/log_out_color"
            android:text="@string/add_to_cart"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline4" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_total_Price"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/tv_total_Price" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>