<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/textColor"
            app:hintTextColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.195">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/iv_back"
                android:contentDescription="@string/navigation_arrow" />

            <TextView
                android:id="@+id/toolbar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="login"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_18ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="welcome back"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/textColor"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailET"
            app:layout_constraintStart_toStartOf="@+id/emailET"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            app:layout_constraintVertical_bias="0.096">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordETLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            style="@style/button_style"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/passwordET"
            app:layout_constraintStart_toStartOf="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="forgot password?"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/passwordET"
            app:layout_constraintHorizontal_bias="0.968"
            app:layout_constraintStart_toStartOf="@+id/passwordET"
            app:layout_constraintTop_toBottomOf="@+id/passwordET" />

        <TextView
            android:id="@+id/tx_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:onClick="onClick"
            android:text="Don't have an account?"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_btn"
            app:layout_constraintStart_toStartOf="@+id/login_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintVertical_bias="0.078" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>